--- a/src/scss/components/_chatbox.scss
+++ b/src/scss/components/_chatbox.scss
@@ -8,7 +8,7 @@
   width: calc(100vw - var(--sep) * 2);
   max-width: 400px;
   min-height: 170px;
-  max-height: calc(100vh - var(--bottom) - var(--sep));
+  max-height: calc(var(--vh) - var(--bottom) - var(--sep));
   border-radius: 32px;
   background: transparent;
   box-shadow: 0 2px 6px 0 rgba($black, 0.5);
@@ -16,12 +16,12 @@
   overflow: hidden;
   transform: scale3d(0, 0, 0);
   opacity: 0;
-  transition: opacity 400ms ease-out, transform 0ms linear 300ms;
+  transition: max-height 0.2s ease-out, opacity 0.4s ease-out, transform 0s linear 0.3s;
 
   #{$class}--chatbox & {
     opacity: 1;
     transform: scale3d(1, 1, 1);
-    transition: opacity 200ms ease-out, transform 0ms linear;
+    transition: max-height 0.2s ease-out, opacity 0.2s ease-out, transform 0s linear;
   }
 
   #{$class}--left & {
@@ -102,7 +102,7 @@
   background: rgba($black, 0.4) svg-load("../../img/close.svg", fill=$white) center no-repeat;
   background-size: 12px;
   cursor: pointer;
-  transition: background-color 300ms ease-out;
+  transition: background-color 0.3s ease-out;
   -webkit-tap-highlight-color: $transparent;
 
   &:hover {
