--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -4,6 +4,7 @@
   --sep: 20px;
   --header: 70px;
   --btn: 60px;
+  --vh: 100vh;
   // Colors
   --red: 37;
   --green: 211;
